--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">PokeApp</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hp">HP:</string>
+    <string name="attack">Attack:</string>
+    <string name="defense">Defense:</string>
+    <string name="sp_atk">Sp.Atk:</string>
+    <string name="sp_def">Sp.Def:</string>
+    <string name="speed">Speed:</string>
+    <string name="attacks">Attacks:</string>
 </resources>
